[package]
authors = ["Matvei <matvei@wheel.me>"]
edition = "2018"
readme = "README.md"
name = "stm32l4xx-can"
version = "0.1.0"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
cfg-if = "0.1"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }
cortex-m-rtic = "0.5"
embedded-hal = "0.2.4"

[dependencies.stm32l4xx-hal]
version = "0.6"
features = ["stm32l4x6", "rt"]
default-features = false
optional = false

[[bin]]
name = "stm32l4xx-can"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
